apps/adguard-home/prd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
  type: ClusterIP
