apps/adguard-home/prd/ingressroute-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-home-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`dns-adg.djasko.com`)
    services:
    - name: adguard-home
      port: 443
  tls:
    passthrough: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: adguard-home-dot
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`dns-adg.djasko.com`)
    services:
    - name: adguard-home
      port: 853
  tls:
    passthrough: true
